...
        
        imageView.contentMode = .scaleAspectFit
        
        return imageView
    }().forAutoLayout
    
    private lazy var loginButton: UIButton = {
        let button = UIButton(type: .custom)
        
        button.accessibilityIdentifier = Constants.loginButtonIdentifier
        button.setTitle(Constants.loginButtonText, for: .normal)
        button.backgroundColor = .ypWhite
        button.setTitleColor(.ypBlack, for: .normal)
...
        navigationController?.navigationBar.backIndicatorTransitionMaskImage = UIImage(resource: .backward)
        navigationItem.backBarButtonItem = UIBarButtonItem(title: "", style: .plain, target: nil, action: nil)
        navigationItem.backBarButtonItem?.tintColor = UIColor(resource: .ypBlack)
    }
    
    private func showErrorAlert() {
        let alert = UIAlertController(
            title: Constants.Alert.title,
            message: Constants.Alert.subtitle,
            preferredStyle: .alert)
        
        let action = UIAlertAction(title: Constants.Alert.buttonText, style: .default) { _ in
            alert.dismiss(animated: true)
...
