...
    }
}

// MARK: - Constants
private extension ImagesListCell {
    enum Constants {
        static let buttonWithLikeOnIdentifier = "buttonWithLikeOn"
        static let buttonWithLikeOffIdentifier = "buttonWithLikeOff"
        
        static let cornerRadius: CGFloat = 16
        
        static let likeButtonSize: CGFloat = 44
        static let dateLabelHeight: CGFloat = 18
        static let labelContainerView: CGFloat = 30
...
