...
    weak var delegate: WebViewViewControllerDelegate?
    var presenter: WebViewPresenterProtocol?
    
    // MARK: - Private properties
    private var estimatedProgressObservation: NSKeyValueObservation?
    
    private lazy var webView: WKWebView = {
        let webView = WKWebView()
        
        webView.accessibilityIdentifier = Constants.webViewIdentifier
        
        return webView
    }().forAutoLayout
...
