...
        
        imageView.contentMode = .scaleAspectFit
        
        return imageView
    }().forAutoLayout
    
    private lazy var backwardButton: UIButton = {
        let button = UIButton(type: .custom)
        
        button.backgroundColor = .clear
        button.setImage(.backward, for: .normal)
        
        button.addTarget(
...
